<resources>
    <string name="app_name">Exsecutum</string>
    <string name="calendar_label">Calendar</string>
    <string name="date_label">DATE</string>
    <string name="repeatable">Repeatable</string>
    <string name="task_name">New Task</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="days_this_event_occurs">Days this event occurs:</string>
    <string name="start_time">Start Time</string>
    <string name="name">Name</string>
    <string name="pm">pm</string>
    <string name="am">am</string>
    <string name="end_time">End Time</string>
    <string name="priority">Priority:</string>
    <string name="not_urgent">Not Urgent</string>
    <string name="somewhat_urgent">Somewhat Urgent</string>
    <string name="pretty_urgent">Pretty Urgent</string>
    <string name="very_urgent">Very Urgent</string>
    <string name="create_task">Create Task</string>
</resources>